--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,7 @@
+@forward 'tokens/spacing';
+@forward 'tokens/layout';
+@forward 'tokens/typography';
+
 // ── Google Fonts ───────────────────────────────────
 @import url("https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
@@ -32,39 +36,25 @@ $overlay-bg: rgba($black, 0.3);
 
 // ──── Breakpoints  ───────────────────────────────────
 
-$break-xs: 500px;
-$break-s: 800px;
-$break-m: 1440px;
-$break-l: 1720px;
-
-// ──── Padding  ───────────────────────────────────
-
-$side-pad-d: 60px;
-$side-pad-m: 16px;
-
-$pad-l-d: 120px;
-$padding-l-m: 48px;
-
-$pad-m-d: 80px;
-$pad-m-m: 48px;
-
-$pad-s-d: 56px;
-$pad-s-m: 32px;
+$bp-mobile: 500px;
+$bp-tablet: 800px;
+$bp-desktop: 1024px;
 
 // ── Mixins  ───────────────────────────────────
-@mixin big($breakpoint: $break-s) {
+
+@mixin big($breakpoint: $bp-tablet) {
     @media (min-width: $breakpoint) {
         @content;
     }
 }
 
-@mixin small($breakpoint: $break-s) {
+@mixin small($breakpoint: $bp-tablet) {
     @media (max-width: $breakpoint) {
         @content;
     }
 }
 
-@mixin mini($breakpoint: $break-xs) {
+@mixin mini($breakpoint: $bp-mobile) {
     @media (max-width: $breakpoint) {
         @content;
     }
@@ -76,30 +66,30 @@ $pad-s-m: 32px;
     }
 }
 
-@mixin set_side_padding($desktop: $side-pad-d, $mobile: $side-pad-m) {
-    padding-left: $mobile;
-    padding-right: $mobile;
+// @mixin set_side_padding($desktop: $side-pad-d, $mobile: $side-pad-m) {
+//     padding-left: $mobile;
+//     padding-right: $mobile;
 
-    @include big {
-        padding-left: $desktop;
-        padding-right: $desktop;
-    }
-}
+//     @include big {
+//         padding-left: $desktop;
+//         padding-right: $desktop;
+//     }
+// }
 
-@mixin set_vertical_padding($desktop: $pad-l-d, $mobile: $pad-l-m) {
-    padding-top: $desktop;
-    padding-bottom: $desktop;
+// @mixin set_vertical_padding($desktop: $pad-l-d, $mobile: $pad-l-m) {
+//     padding-top: $desktop;
+//     padding-bottom: $desktop;
 
-    @include small {
-        padding-top: $mobile;
-        padding-bottom: $mobile;
-    }
-}
+//     @include small {
+//         padding-top: $mobile;
+//         padding-bottom: $mobile;
+//     }
+// }
 
-@mixin set_padding($desktop_v: $pad-l-d, $mobile_v: $pad-l-m, $desktop_h: $side-pad-d, $mobile_h: $side-pad-m) {
-    padding: $desktop_v $desktop_h;
+// @mixin set_padding($desktop_v: $pad-l-d, $mobile_v: $pad-l-m, $desktop_h: $side-pad-d, $mobile_h: $side-pad-m) {
+//     padding: $desktop_v $desktop_h;
 
-    @include small {
-        padding: $mobile_v $mobile_h;
-    }
-}
+//     @include small {
+//         padding: $mobile_v $mobile_h;
+//     }
+// }
